syntax = "proto3";

option java_package = "io.github.pndhd1.sleeptimer.data.proto";
option java_multiple_files = true;

message ProtoActiveTimerState {
  optional ProtoActiveTimer active_timer = 1;
}

message ProtoActiveTimer {
  int64 target_time_seconds = 1;
}
